drag fix on safari ios?

--- a/deployment/style.css
+++ b/deployment/style.css
@@ -630,6 +630,14 @@ video {
   width: 1.25rem;
 }
 
+.w-2 {
+  width: 0.5rem;
+}
+
+.w-4 {
+  width: 1rem;
+}
+
 .min-w-\[100px\] {
   min-width: 100px;
 }
@@ -728,6 +736,10 @@ video {
   align-self: center;
 }
 
+.self-stretch {
+  align-self: stretch;
+}
+
 .truncate {
   overflow: hidden;
   text-overflow: ellipsis;
@@ -758,6 +770,26 @@ video {
 .border-neutral-400 {
   --tw-border-opacity: 1;
   border-color: rgb(163 163 163 / var(--tw-border-opacity));
+}
+
+.bg-\[url\(\.\/imgs\/drag\.svg\)\] {
+  background-image: url(./imgs/drag.svg);
+}
+
+.bg-\[url\(\'\.\/imgs\/drag\.svg\'\)\] {
+  background-image: url('./imgs/drag.svg');
+}
+
+.bg-\[url\(\.\.\/imgs\/drag\.svg\)\] {
+  background-image: url(../imgs/drag.svg);
+}
+
+.bg-center {
+  background-position: center;
+}
+
+.bg-no-repeat {
+  background-repeat: no-repeat;
 }
 
 .p-6 {
@@ -979,6 +1011,14 @@ video {
 
 .opacity-20 {
   opacity: 0.2;
+}
+
+.opacity-10 {
+  opacity: 0.1;
+}
+
+.opacity-\[\.18\] {
+  opacity: .18;
 }
 
 .outline-none {
